<resources>
    <string name="about_app">About app</string>
    <string name="about_app_content">\n
        This app is FOSS.\n
        Source code is available at GitHub.\n
        \n
        App version:\u0020
    </string>
    <string name="action_add">Add</string>
    <string name="action_apply">Apply</string>
    <string name="action_backup">Backup</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_close">Close</string>
    <string name="action_delete">Delete</string>
    <string name="action_delete_finished">Delete finished</string>
    <string name="action_discard">Discard</string>
    <string name="action_export">Export to a file</string>
    <string name="action_import">Import from a file</string>
    <string name="action_save">Save</string>
    <string name="app_name">tasksFT</string>
    <string name="backup_file_exported">Backup file exported</string>
    <string name="backup_file_imported">Backup file imported</string>
    <string name="backup_will_be_saved_to">The tasks backup will be saved to:\n</string>
    <string name="choose_dir">Choose folder</string>
    <string name="could_not_do">Could not do that</string>
    <string name="description">Description</string>
    <string name="night_mode_auto">Night mode is auto</string>
    <string name="night_mode_off">Night mode is off</string>
    <string name="night_mode_on">Night mode is on</string>
    <string name="night_mode_switch">Switch night mode</string>
    <string name="notification_finish">Finish</string>
    <string name="notification_snooze">Snooze for 1 hour</string>
    <string name="notification_snoozed">Reminder snoozed for 1 hour</string>
    <string name="reminder_days">\ d.\ </string>
    <string name="reminder_hours">\ h.\ </string>
    <string name="reminder_in">Reminder in\ </string>
    <string name="reminder_minutes">\ min.</string>
    <string name="reminder_months">\ mth.\ </string>
    <string name="sample_date">01.01.21</string>
    <string name="sample_text">Sample text</string>
    <string name="sample_time">12:00</string>
    <string name="set_reminder">Set a reminder</string>
    <string name="task_details_drop_down_arrow">Task details drop down arrow</string>
    <string name="task_not_init">Task is not initialized!</string>
    <string name="task_notification_description">Sends a scheduled notification</string>
    <string name="task_notification_name">Task notification</string>
    <string name="task_title_empty">Task title is empty</string>
    <string name="title">Title</string>
    <string name="unsaved_changes">Unsaved changes</string>
    <string name="what_to_do">What would you like to do?</string>
</resources>
