<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_delete_finished"
        android:icon="@drawable/ic_delete_finished"
        android:orderInCategory="0"
        android:title="@string/action_delete_finished"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_switch_night"
        android:icon="@drawable/ic_switch_night"
        android:orderInCategory="1"
        android:title="@string/night_mode_switch"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_about_app"
        android:icon="@drawable/ic_info"
        android:orderInCategory="2"
        android:title="@string/about_app"
        app:showAsAction="ifRoom" />

</menu>