<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.rustamft.tasksft.screens.editor.EditorViewModel" />

        <variable
            name="datePicker"
            type="com.rustamft.tasksft.screens.editor.picker.DatePickerFragment" />

        <variable
            name="timePicker"
            type="com.rustamft.tasksft.screens.editor.picker.TimePickerFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.editor.EditorFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/margin_standard">

            <EditText
                android:id="@+id/editor_title_edittext"
                style="@style/EditText"
                android:autofillHints="name,username"
                android:hint="@string/title"
                android:inputType="textCapSentences|textShortMessage"
                android:text="@={viewModel.observableTask.title}"
                android:theme="@style/EditText" />

            <EditText
                android:id="@+id/editor_description_edittext"
                style="@style/EditText"
                android:autofillHints="name,username,emailAddress,postalAddress"
                android:hint="@string/description"
                android:inputType="textCapSentences|textMultiLine"
                android:text="@={viewModel.observableTask.description}"
                android:theme="@style/EditText" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/editor_datetime_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@={viewModel.observableTask.hasReminder}"
                android:minHeight="@dimen/min_height_standard"
                android:text="@string/set_reminder"
                android:textSize="@dimen/text_size_standard" />

            <RelativeLayout
                android:id="@+id/editor_datetime_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="@{viewModel.observableTask.hasReminder ? View.VISIBLE : View.GONE}">

                <Button
                    android:id="@+id/editor_date_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginHorizontal="@dimen/margin_standard"
                    android:minHeight="@dimen/min_height_standard"
                    android:onClick="@{() -> datePicker.show()}"
                    android:text="@={viewModel.observableTask.date}"
                    android:textAllCaps="false"
                    android:textSize="@dimen/text_size_standard" />

                <Button
                    android:id="@+id/editor_time_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_standard"
                    android:layout_toEndOf="@+id/editor_date_button"
                    android:minHeight="@dimen/min_height_standard"
                    android:onClick="@{() -> timePicker.show()}"
                    android:text="@={viewModel.observableTask.time}"
                    android:textSize="@dimen/text_size_standard" />

            </RelativeLayout>

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/editor_save_fab"
            style="@style/FAB"
            android:contentDescription="@string/action_save"
            android:onClick="@{(view) -> viewModel.save(view)}"
            android:src="@drawable/ic_save"
            android:theme="@style/FAB"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>